# ShaiyaGenesis

./: CMakeLists.txt  CREDITS  LICENSE  README  README.md  build_auth.sh  build_db.sh  build_game.sh  build_game_db.sh
cmake/: options.cmake  show_options.cmake
src/auth_server/: CMakeLists.txt
src/auth_server/genesis/auth/: AuthServer.cpp  AuthServer.h  Main.cpp
src/auth_server/genesis/auth/io/: DatabaseClient.h  IoServer.cpp  IoServer.h
src/auth_server/genesis/auth/io/packets/: PacketHandler.h  PacketManager.cpp  PacketManager.h
src/auth_server/genesis/auth/io/packets/impl/: ConnectionTerminatedPacketHandler.cpp  ConnectionTerminatedPacketHandler.h  DefaultPacketHandler.cpp  DefaultPacketHandler.h  Handlers.h  HandshakePacketHandler.h  LoginRequestPacketHandler.cpp  LoginRequestPacketHandler.h  ServerSelectPacketHandler.h
src/common/: CMakeLists.txt
src/common/genesis/common/configuration/: ConfigManager.cpp  ConfigManager.h
src/common/genesis/common/cryptography/: MD5.cpp
src/common/genesis/common/database/: DatabaseStructs.h  Opcodes.h
src/common/genesis/common/database/structs/auth/: AuthRequest.h  AuthResponse.h  Server.h
src/common/genesis/common/database/structs/game/: CharacterLoadInfo.h  CreateCharacterRequest.h  GameCharacter.h  GameHandshakeRequest.h  GameLoadPlayerResponse.h  PlayerInfo.h
src/common/genesis/common/game/: Constants.h
src/common/genesis/common/game/definitions/: SkillDefinition.h
src/common/genesis/common/logging/: Logger.cpp  Logger.h
src/common/genesis/common/networking/client/: GenesisClient.cpp  GenesisClient.h
src/common/genesis/common/networking/packets/: Packet.h  PacketBuilder.cpp  PacketBuilder.h
src/common/genesis/common/networking/server/: GenesisServer.cpp  GenesisServer.h
src/common/genesis/common/networking/server/session/: ServerSession.cpp  ServerSession.h
src/common/genesis/common/packets/: Opcodes.h
src/db_server/: CMakeLists.txt
src/db_server/genesis/database/: DatabaseServer.cpp  DatabaseServer.h  Main.cpp
src/db_server/genesis/database/connector/: DatabaseConnector.cpp  DatabaseConnector.h
src/db_server/genesis/database/io/: IoServer.cpp  IoServer.h
src/db_server/genesis/database/io/packets/: PacketHandler.h  PacketManager.cpp  PacketManager.h
src/db_server/genesis/database/io/packets/impl/: CharacterScreenDataRequestHandler.h  CheckAvailableNameRequestHandler.h  CreateCharacterRequestHandler.h  DefaultPacketHandler.h  DeleteCharacterRequestHandler.h  DeleteSessionRequestHandler.h  GameUserLoadRequestHandler.h  Handlers.h  LoadGameCharacterDataRequestHandler.h  RestoreCharacterRequestHandler.h  SelectFactionRequestHandler.h  ServerListRequestHandler.h  UserAuthRequestHandler.h  UserGameConnectRequestHandler.h
src/game_server/: CMakeLists.txt
src/game_server/genesis/game/: Main.cpp
src/game_server/genesis/game/command/: Command.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandListener.h
src/game_server/genesis/game/io/: IoServer.cpp  IoServer.h
src/game_server/genesis/game/io/packets/: PacketHandler.h  PacketManager.cpp  PacketManager.h
src/game_server/genesis/game/io/packets/impl/: CheckAvailableNamePacketHandler.cpp  CheckAvailableNamePacketHandler.h  CreateCharacterPacketHandler.cpp  CreateCharacterPacketHandler.h  DefaultPacketHandler.cpp  DefaultPacketHandler.h  DeleteCharacterPacketHandler.cpp  DeleteCharacterPacketHandler.h  GameHandshakePacketHandler.cpp  GameHandshakePacketHandler.h  Handlers.h  RestoreCharacterPacketHandler.cpp  RestoreCharacterPacketHandler.h  SelectCharacterPacketHandler.cpp  SelectCharacterPacketHandler.h  SelectFactionPacketHandler.cpp  SelectFactionPacketHandler.h
src/game_server/genesis/game/io/packets/outgoing/: PacketRepository.cpp  PacketRepository.h
src/game_server/genesis/game/model/definitions/: SkillDefinition.h
src/game_server/genesis/game/model/entity/: Attributes.cpp  Attributes.h  Entity.cpp  Entity.h  Position.cpp  Position.h  UpdateFlags.cpp  UpdateFlags.h
src/game_server/genesis/game/model/entity/player/: Character.cpp  Character.h  Player.cpp  Player.h
src/game_server/genesis/game/scripting/: LuaScriptingEnvironment.cpp  LuaScriptingEnvironment.h
src/game_server/genesis/game/world/: GameWorld.cpp  GameWorld.h
src/game_server/genesis/game/world/pulse/: GamePulseHandler.cpp  GamePulseHandler.h
src/game_server/genesis/game/world/pulse/task/: Task.h
src/game_server/genesis/game/world/pulse/task/impl/: CheckAvailableNameTask.cpp  CheckAvailableNameTask.h  CreateCharacterTask.cpp  CreateCharacterTask.h  LoadCharacterGameWorldTask.cpp  LoadCharacterGameWorldTask.h  LoadPlayerTask.cpp  LoadPlayerTask.h  SendPlayerCharacterListTask.cpp  SendPlayerCharacterListTask.h  SendPlayerFactionTask.cpp  SendPlayerFactionTask.h
(+13 files in other folders)
